codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_token_activity_refresh_renders_above_composer_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

/usage daily

 Token activity
   Loading...

────────────────────────────────────────────────────────────────────────────────
› Ask Codex to do anything

  openai gpt-5.5 default · native · read-only, no-network · /tmp/project
